--- a/css/fontello.css
+++ b/css/fontello.css
@@ -60,3 +60,4 @@
 .icon-facebook:before { content: '\f09a'; } /* '' */
 .icon-menu:before { content: '\f0c9'; } /* '' */
 .icon-pinterest:before { content: '\f231'; } /* '' */
+.icon-instagram:before {content: '\f09a'; }
